Fixed the index cameras and details tab info alignment. (#1813)
* Fixed the index cameras and details tab info alignment.

* Add an empty line before rule declaration.

--- a/app/assets/stylesheets/views/cameras/cameras.scss
+++ b/app/assets/stylesheets/views/cameras/cameras.scss
@@ -143,6 +143,10 @@ border-bottom: 1px solid rgba(16, 28, 39, 0.58);
 
 @media screen and (max-width: 1600px) {
 
+  .camera-index {
+    height: 300px;
+  }
+
   .page-content .camera-index-height {
     height: 420px;
   }
